--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
       <div class="artist">
         <img
           src="https://images.fineartamerica.com/images/artworkimages/mediumlarge/3/starry-night-by-vincent-van-gogh-vincent-van-gogh.jpg"
+          alt="painting of starry night by vincent van gogh"
         />
         <a href="https://en.wikipedia.org/wiki/Vincent_van_Gogh">
           Vincent Van Gogh</a
@@ -53,6 +54,7 @@
       <div class="artist">
         <img
           src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/30/The_Fighting_Temeraire%2C_JMW_Turner%2C_National_Gallery.jpg/600px-The_Fighting_Temeraire%2C_JMW_Turner%2C_National_Gallery.jpg"
+          alt="painting by Joseph Mallord William Turner"
         />
         <a href="https://en.wikipedia.org/wiki/J._M._W._Turner">
           Joseph Mallord William Turner</a
